[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/EnemyTeleporter.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=53]
radius = 8.0

[node name="EnemyTeleporter" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 53 )

[node name="Pos1" type="Position2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Pos1"]

[node name="Pos2" type="Position2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Pos2"]

[connection signal="body_entered" from="." to="." method="_on_EnemyTeleporter_body_entered"]
